--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "source/index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon source/index.js",
-    "start":"node source/index.js"
+    "start": "node source/index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^17.2.0",
+    "env": "^0.0.2",
+    "express": "^4.18.2",
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
